<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_footer_background"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_3" />

    <LinearLayout
        android:id="@+id/txtMSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/item_padding">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/msb_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_padding"
            android:text="@string/msb"
            android:textColor="@color/text_color_3"
            android:textSize="@dimen/left_menu_footer_text" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_3" />

    <LinearLayout
        android:id="@+id/txtKKK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/item_padding">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_kara_kuvetleri_komutanligi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_padding"
            android:text="@string/kkk"
            android:textColor="@color/text_color_3"
            android:textSize="@dimen/left_menu_footer_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_3" />

    <LinearLayout
        android:id="@+id/txtHVKK"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/item_padding">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_hava_kuvvetleri_komutanligi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_padding"
            android:text="@string/hvkk"
            android:textColor="@color/text_color_3"
            android:textSize="@dimen/left_menu_footer_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_3" />

    <LinearLayout
        android:id="@+id/txtDKK"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/item_padding">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_deniz_kuvvetleri_komutanligi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_padding"
            android:text="@string/dkk"
            android:textColor="@color/text_color_3"
            android:textSize="@dimen/left_menu_footer_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_3" />

    <LinearLayout
        android:id="@+id/txtMSU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/item_padding">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_milli_savunma_universitesi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_padding"
            android:text="@string/msu"
            android:textColor="@color/text_color_3"
            android:textSize="@dimen/left_menu_footer_text" />
    </LinearLayout>
</LinearLayout>