<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MeasurementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/measurement_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/item_padding">

        <io.ghyeok.stickyswitch.widget.StickySwitch
            android:id="@+id/swcSex"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:ss_animationDuration="300"
            app:ss_animationType="line"
            app:ss_iconPadding="10dp"
            app:ss_iconSize="36dp"
            app:ss_leftIcon="@drawable/ic_male"
            app:ss_leftText="ERKEK"
            app:ss_rightIcon="@drawable/ic_female"
            app:ss_rightText="KADIN"
            app:ss_selectedTextSize="18sp"
            app:ss_sliderBackgroundColor="@color/measurement_sticky_background"
            app:ss_switchColor="@color/colorPrimary"
            app:ss_textColor="@color/text_color_1"
            app:ss_textSize="@dimen/item_title_text" />


        <EditText
            android:id="@+id/edtSize"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:background="@drawable/measurement_edit_text_shape"
            android:drawableLeft="@drawable/ic_ruler"
            android:hint="@string/measurement_size"
            android:inputType="number"
            android:maxLength="3"
            android:padding="@dimen/item_measurement_padding"
            android:textColor="@color/text_color_3"
            android:textColorHint="@color/measurement_hint_icon"
            android:textCursorDrawable="@color/text_color_3"
            android:textSize="@dimen/item_title_text" />

        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:background="@drawable/measurement_edit_text_shape"
            android:drawableLeft="@drawable/ic_weight_tool"
            android:hint="@string/measurement_weight"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:maxLength="3"
            android:padding="@dimen/item_measurement_padding"
            android:textColor="@color/text_color_3"
            android:textColorHint="@color/measurement_hint_icon"
            android:textCursorDrawable="@color/text_color_3"
            android:textSize="@dimen/item_title_text" />

        <TextView
            android:id="@+id/txtExp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/item_big_title_text" />

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin"
            android:background="@drawable/measurement_query_shape"
            android:text="@string/measurement_query"
            android:textColor="@color/text_color_3" />
    </LinearLayout>
</FrameLayout>